--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "echo \"No tests yet\" && exit 0"
   },
   "dependencies": {
+    "@kutalia/whisper-node-addon": "^1.1.0",
     "electron-serve": "^2.0.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
