feat: Mission 9 - Add unique enrichment modes (commit, tweet, slack), app icon, Windows build, code cleanup

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -14,6 +14,7 @@ extraResources:
     to: "resources"
 
 mac:
+  icon: build/icon.icns
   category: public.app-category.productivity
   target:
     - target: dmg
@@ -24,6 +25,18 @@ mac:
   gatekeeperAssess: false
   entitlements: build/entitlements.mac.plist
   entitlementsInherit: build/entitlements.mac.plist
+
+win:
+  icon: build/icon.png
+  target:
+    - target: nsis
+      arch:
+        - x64
+
+nsis:
+  oneClick: false
+  allowToChangeInstallationDirectory: true
+  deleteAppDataOnUninstall: true
 
 dmg:
   contents:
