--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -50,4 +50,5 @@ dmg:
 asar: true
 asarUnpack:
   - "**/*.node"
+  - "**/node_modules/@kutalia/whisper-node-addon/**/*"
   - "resources/models/**/*"
