--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@huggingface/transformers": "^3.8.1",
     "electron-serve": "^2.0.0",
+    "electron-store": "^11.0.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
   },
