feat(ui): Add Live Volume Indicator and finalize Mission 11

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -14,6 +14,7 @@ extraResources:
     to: "resources"
 
 mac:
+  identity: null
   icon: build/icon.icns
   category: public.app-category.productivity
   target:
